@@ -4,7 +4,7 @@ Utility functions for testing.
 import os
 import unittest
 import doctest
-from StringIO import StringIO
+
 
 def importModule(name):
     mod = __import__(name)
@@ -13,14 +13,40 @@ def importModule(name):
         mod = getattr(mod, comp)
     return mod
 
-def fileIsTest(path, skipFiles=[]):
+
+def fileCheck(path, skipFiles=[]):
     if not os.path.isfile(path):
         return False
     filename = os.path.basename(path)
     if filename in skipFiles:
         return False
+    return True
+
+
+def fileIsTest(path, skipFiles=[]):
+    result = fileCheck(path, skipFiles)
+    if not result:
+        return False
+    filename = os.path.basename(path)
     if filename.startswith('test') and filename.endswith('.py'):
         return True
+
+
+def fileHasDoctests(path, skipFiles=[]):
+    result = fileCheck(path, skipFiles)
+    if result and path.endswith('.py'):
+        if path.endswith('.pyc'):
+            import pdb;pdb.set_trace()
+        fh = open(path)
+        if '>>>' in fh.read():
+            result = True
+        else:
+            result = False
+        fh.close()
+    else:
+        result = False
+    return result
+
 
 def find(start, func, skip=[]):
     for item in [os.path.join(start, x) for x in os.listdir(start)]:
@@ -30,14 +56,52 @@ def find(start, func, skip=[]):
             for subItem in find(item, func, skip):
                 yield subItem
 
+
 def findTests(startDir, skipFiles=[]):
     return find(startDir, fileIsTest, skipFiles)
 
-def buildDoctestSuite(modules):
+
+def findDoctests(startDir, skipFiles=[]):
+    return find(startDir, fileHasDoctests, skipFiles)
+
+
+def _buildDoctestSuiteFromModules(modules):
     suite = unittest.TestSuite()
     for modname in modules:
         mod = importModule(modname)
         suite.addTest(doctest.DocTestSuite(mod))
+    return suite
+
+
+def _buildDoctestSuiteFromFiles(files):
+    suite = []
+    for file in files:
+        suite.append(DocFileSuite(file))
+    return suite
+
+def _buildDoctestSuiteFromPaths(paths=[], skip=[]):
+    """
+    paths: a list of directories to search
+    skip: a list of file names to skip
+    """
+    suite = unittest.TestSuite()
+    loader = unittest.TestLoader()
+    for startDir in paths:
+        for testFile in findDoctests(startDir, skip):
+            modBase = os.path.splitext(testFile)[0]
+            name = modBase.replace(os.path.sep, '.')
+            mod = importModule(name)
+            suite.addTest(doctest.DocTestSuite(mod))
+    return suite
+
+def buildDoctestSuites(modules=[], files=[], paths=[]):
+    suite = []
+    if modules:
+        suite.extend(_buildDoctestSuiteFromModules(modules))
+    if files:
+        suite.extend(_buildDoctestSuiteFromFiles(files))
+    if paths:
+        suite.extend(_buildDoctestSuiteFromPaths(paths))
     return suite
 
 def buildUnittestSuites(paths=[], skip=[]):
@@ -65,22 +129,3 @@ def buildUnittestSuites(paths=[], skip=[]):
                 # append to suites list
                 suites.append(suite)
     return suites
-
-class BaseTestCase(unittest.TestCase):
-
-    def getTestName(self):
-        if hasattr(self, '_testMethodName'):
-            return self._testMethodName.split('test_')[1]
-        return self._TestCase__testMethodName.split('test_')[1]
-
-    def getTestData(self, doc):
-        result = StringIO()
-        doc.write(result)
-        testData = result.getvalue()
-        result.close()
-        return testData
-
-    def callMake(self):
-        return getattr(self, 'make_%s' % self.getTestName())()
-
-
