@@ -38,4 +38,3 @@ setup(
         "License :: OSI Approved :: BSD License",
        ],
     )
-
